Fix button width on iphone 3

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -167,7 +167,7 @@ h3 {
 	font-family: 'Roboto', Arial;
 	color: #FFF;
 	text-decoration: none;
-	font-size: 25px;
+	font-size: 19px;
 	font-weight: 100;
 }
 
